--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,8 +2,8 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # This will run the action daily, adjust as necessary.
-  workflow_dispatch:  # To run it manually
+    - cron: '0 0 * * *'  
+  workflow_dispatch:  
 
 jobs:
   generate-snake:
